# backend/app/Http/Controllers/Authentication.php
@@ -3,11 +3,16 @@
 namespace App\Http\Controllers;
 
 use App\Jobs\SendEmailVerifyForgetPassword;
+use App\Jobs\SendVerificationEmailCode;
 use App\Mail\ForgetPassword;
+use App\Mail\VerifyEmail;
+use App\Models\EmailVerificationCode;
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Mail;
+use Illuminate\Support\Facades\Validator;
 
 class Authentication extends Controller
 {
@@ -42,6 +47,7 @@ class Authentication extends Controller
      */
     public function signup(Request $request)
     {
+        
         if (User::where('email', $request->email)->first()) {
             return response()->json(["status" => "email is token"], 406);
         } else {
@@ -145,11 +151,10 @@ class Authentication extends Controller
         }
     }
 
-    //request a email for verify user.
-
+    //request a email to verify user to do a forget password process.
     /** 
      * @OA\Post(
-     * path="/api/forget_password",
+     * path="/api/forget_password_request",
      * tags={"auth"},
      * @OA\RequestBody(
      *       required=true,
@@ -167,13 +172,13 @@ class Authentication extends Controller
      * )
      */
 
-    public function forgetPassword(Request $request)
+    public function RequestForgetPassword(Request $request)
     {
         $user = User::where('email', $request->email)->first();
         if ($user) {
             SendEmailVerifyForgetPassword::dispatch(
-                Mail::to($request->email)->send(new ForgetPassword($user->id))
-            ); 
+                Mail::to($request->email)->send(new ForgetPassword($user->id, $user->username))
+            );
             return response()->json(["status" => "success"]);
         } else {
             return response()->json(["status" => "account dosen't exit"], 406);
@@ -181,8 +186,8 @@ class Authentication extends Controller
     }
 
 
-    //email for verify user handler.
-    public function forgetPasswordHandler(Request $request)
+    //email verify user handler. it will give a token for reset password
+    public function ForgetPasswordHandler(Request $request)
     {
         if (!$request->hasValidSignature()) {
             abort(401);
@@ -191,5 +196,115 @@ class Authentication extends Controller
             $token = $user->createToken($user->email, ['user:restPassword'])->plainTextToken;
             return redirect("http://localhost:3000/reset_password_token/" . $token);
         }
+    }
+
+
+    //request a email to verify user.
+    /** 
+     * @OA\Post(
+     * path="/api/verify_email_request",
+     * tags={"auth"},
+     * security={{"bearerAuth":{}}},
+     * @OA\RequestBody(
+     *       required=true,
+     *    @OA\JsonContent(
+     *       @OA\Property(property="code", type="string", example="da1Scz2")
+     *    )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="status", type="string", example="success")
+     *      )
+     * )
+     * )
+     */
+    public function RequestEmailVerification(Request $request)
+    {
+        function generate_alphanumeric($input, EmailVerificationCode $table, $strength = 6)
+        {
+            $input_length = strlen($input);
+            $random_string = '';
+            for ($i = 0; $i < $strength; $i++) {
+                $random_character = $input[mt_rand(0, $input_length - 1)];
+                $random_string .= $random_character;
+            }
+            if ($table::where("code", $random_string)->first()) {
+                return generate_alphanumeric($input, $table);
+            } else {
+                return $random_string;
+            }
+        }
+        $emailVerificationCode = new EmailVerificationCode();
+        $alphanumeric = '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ';
+        $code = generate_alphanumeric($alphanumeric, $emailVerificationCode);
+
+        $oldCode = $emailVerificationCode::where('user_id', $request->user()->id);
+        if ($oldCode) {
+            $oldCode->delete();
+        }
+
+        $emailVerificationCode::create([
+            'code' => $code,
+            'user_id' => $request->user()->id,
+            'expire_at' => now()->addMinute(15)
+        ]);
+
+        SendVerificationEmailCode::dispatch(
+            Mail::to($request->user()->email)->send(new VerifyEmail(
+                $code,
+                $request->user()->username
+            ))
+        );
+        return response()->json(["status" => "success"]);
+    }
+
+    //handle email verification code.
+    /** 
+     * @OA\Post(
+     * path="/api/verify_email_handler",
+     * tags={"auth"},
+     * security={{"bearerAuth":{}}},
+     * @OA\RequestBody(
+     *       required=true,
+     *    @OA\JsonContent(
+     *       @OA\Property(property="code", type="string", example="da1Scz2")
+     *    )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="status", type="string", example="success")
+     *      )
+     * )
+     * )
+     */
+    public function EmailVerificationHandler(Request $request)
+    {
+        return response()->json($request);
+
+        if (!ctype_alnum($request->code)) {
+            return response()->json(["status" => "code not match"]);
+        }
+
+        $codeOwnerID = DB::select("
+            SELECT user_id FROM email_verification_codes
+            WHERE user_id = ? and code = ?
+            LIMIT 1
+        ", [$request->user()->id, $request->code]);
+
+        if (!$codeOwnerID) {
+            return response()->json(["status" => "verification code not match"]);
+        }
+
+        DB::update("
+            UPDATE users
+            SET email_verified_at = ?
+            WHERE id = ?
+        ",[now(),$codeOwnerID[0]->user_id]);
+        
+        return response()->json(User::find($codeOwnerID[0]->user_id));
     }
 }
